<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="anuragdesai.library.kneereplacement.goToPainSurvey4"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.75"
        android:layout_height="fill_parent" android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_button_a"
            android:onClick="onface"
            android:tag="1"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="5dp"
            android:id="@+id/layoutbutton1">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/a_transparent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pain_6"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:padding="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_button_b"
            android:onClick="onface"
            android:tag="2"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="5dp"
            android:id="@+id/layoutbutton2">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/b_transparent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pain_5"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:padding="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_button_c"
            android:onClick="onface"
            android:tag="3"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="5dp"
            android:id="@+id/layoutbutton3" >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/c_transparent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pain_4"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:padding="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_button_d"
            android:onClick="onface"
            android:tag="4"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="5dp"
            android:id="@+id/layoutbutton4" >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/d_transparent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pain_3"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:padding="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_button_e"
            android:onClick="onface"
            android:tag="5"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="5dp"
            android:id="@+id/layoutbutton5" >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/e_transparent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pain_2"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:padding="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_button_f"
            android:onClick="onface"
            android:tag="6"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="5dp"
            android:id="@+id/layoutbutton6" >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/f_transparent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pain_1"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:padding="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.25"
        android:layout_height="fill_parent">

        <com.android.widget.VerticalSeekBar
            android:id="@+id/VerticalSeekBar1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollIndicators="start|end" />
    </LinearLayout>
</LinearLayout>
