<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="anuragdesai.library.kneereplacement.goToPainSurvey1"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.20"
        android:layout_height="fill_parent"
        android:background="@drawable/custom_button_grey"
        android:onClick="face6"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/layoutbutton6"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <!--ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/f_transparent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:adjustViewBounds="true"/-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:padding="2dp"
            android:text="@string/pain_1_1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.20"
        android:layout_height="fill_parent"
        android:background="@drawable/custom_button_grey"
        android:onClick="face5"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:id="@+id/layoutbutton5"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <!--ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/e_transparent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:adjustViewBounds="true"/-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/pain_2_1"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:padding="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.20"
        android:layout_height="fill_parent"
        android:background="@drawable/custom_button_grey"
        android:onClick="face4"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:id="@+id/layoutbutton4"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <!--ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/d_transparent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:adjustViewBounds="true"/-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/pain_3_1"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:padding="2dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.20"
        android:layout_height="fill_parent"
        android:background="@drawable/custom_button_grey"
        android:onClick="face3"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:id="@+id/layoutbutton3"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <!--ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/c_transparent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:adjustViewBounds="true"/-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/pain_4_1"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:padding="2dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="0.20"
        android:background="@drawable/custom_button_grey"
        android:onClick="face2"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:id="@+id/layoutbutton2"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <!--ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/b_transparent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:adjustViewBounds="true"/-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/pain_5_1"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:padding="2dp"/>
    </LinearLayout>
    <!--LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.15"
        android:layout_height="fill_parent"
        android:background="@drawable/custom_button_a"
        android:onClick="face1"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="2dp"
        android:id="@+id/layoutbutton1"
        android:orientation="vertical">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/a_transparent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/pain_6"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:padding="5dp"/>
    </LinearLayout-->
</LinearLayout>
